--- a/wth_foundation/wth/trunk/Makefile.am
+++ b/wth_foundation/wth/trunk/Makefile.am
@@ -1,14 +1,15 @@
+CFLAGS = -ggdb
+
 bin_PROGRAMS = wthc wthd
 
-wthc_SOURCES = wthc.c wth.h
-wthc_LDADD = $(top_builddir)/libwth.a
+wthc_SOURCES = wthc.c wth.h version.h
+wthc_LDADD = $(top_builddir)/libwth.a 
 
-wthd_SOURCES = wthd.c wth.h
+wthd_SOURCES = wthd.c wth.h version.h
 wthd_LDADD = $(top_builddir)/libwth.a
 
-noinst_HEADERS = wth.h
+noinst_HEADERS = wth.h wthnet.h wthprv.h
 
 lib_LIBRARIES = libwth.a
-libwth_a_SOURCES = libwth.c serial.c net.c util.c wth.h
-
+libwth_a_SOURCES = libwth.c serial.c net.c wth.h wthnet.h wthprv.h
 
