--- a/wth_foundation/wth/trunk/Makefile.in
+++ b/wth_foundation/wth/trunk/Makefile.in
@@ -1,6 +1,6 @@
-# Makefile.in generated automatically by automake 1.4 from Makefile.am
+# Makefile.in generated automatically by automake 1.4-p5 from Makefile.am
 
-# Copyright (C) 1994, 1995-8, 1999 Free Software Foundation, Inc.
+# Copyright (C) 1994, 1995-8, 1999, 2001 Free Software Foundation, Inc.
 # This Makefile.in is free software; the Free Software Foundation
 # gives unlimited permission to copy and/or distribute it,
 # with or without modifications, as long as this notice is preserved.
@@ -63,18 +63,20 @@ PACKAGE = @PACKAGE@
 RANLIB = @RANLIB@
 VERSION = @VERSION@
 
+CFLAGS = -ggdb
+
 bin_PROGRAMS = wthc wthd
 
-wthc_SOURCES = wthc.c wth.h
-wthc_LDADD = $(top_builddir)/libwth.a
+wthc_SOURCES = wthc.c wth.h version.h
+wthc_LDADD = $(top_builddir)/libwth.a 
 
-wthd_SOURCES = wthd.c wth.h
+wthd_SOURCES = wthd.c wth.h version.h
 wthd_LDADD = $(top_builddir)/libwth.a
 
-noinst_HEADERS = wth.h
+noinst_HEADERS = wth.h wthnet.h wthprv.h
 
 lib_LIBRARIES = libwth.a
-libwth_a_SOURCES = libwth.c serial.c net.c util.c wth.h
+libwth_a_SOURCES = libwth.c serial.c net.c wth.h wthnet.h wthprv.h
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
 CONFIG_CLEAN_FILES = 
@@ -86,7 +88,7 @@ CPPFLAGS = @CPPFLAGS@
 LDFLAGS = @LDFLAGS@
 LIBS = @LIBS@
 libwth_a_LIBADD = 
-libwth_a_OBJECTS =  libwth.o serial.o net.o util.o
+libwth_a_OBJECTS =  libwth.o serial.o net.o
 AR = ar
 PROGRAMS =  $(bin_PROGRAMS)
 
@@ -96,7 +98,6 @@ wthc_LDFLAGS =
 wthd_OBJECTS =  wthd.o
 wthd_DEPENDENCIES =  $(top_builddir)/libwth.a
 wthd_LDFLAGS = 
-CFLAGS = @CFLAGS@
 COMPILE = $(CC) $(DEFS) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS)
 CCLD = $(CC)
 LINK = $(CCLD) $(AM_CFLAGS) $(CFLAGS) $(LDFLAGS) -o $@
@@ -111,8 +112,8 @@ DISTFILES = $(DIST_COMMON) $(SOURCES) $(HEADERS) $(TEXINFOS) $(EXTRA_DIST)
 
 TAR = tar
 GZIP_ENV = --best
-DEP_FILES =  .deps/libwth.P .deps/net.P .deps/serial.P .deps/util.P \
-.deps/wthc.P .deps/wthd.P
+DEP_FILES =  .deps/libwth.P .deps/net.P .deps/serial.P .deps/wthc.P \
+.deps/wthd.P
 SOURCES = $(libwth_a_SOURCES) $(wthc_SOURCES) $(wthd_SOURCES)
 OBJECTS = $(libwth_a_OBJECTS) $(wthc_OBJECTS) $(wthd_OBJECTS)
 
@@ -295,7 +296,7 @@ distdir: $(DISTFILES)
 	@for file in $(DISTFILES); do \
 	  d=$(srcdir); \
 	  if test -d $$d/$$file; then \
-	    cp -pr $$/$$file $(distdir)/$$file; \
+	    cp -pr $$d/$$file $(distdir)/$$file; \
 	  else \
 	    test -f $(distdir)/$$file \
 	    || ln $$d/$$file $(distdir)/$$file 2> /dev/null \
