--- a/wth_foundation/wth/trunk/Makefile.in
+++ b/wth_foundation/wth/trunk/Makefile.in
@@ -57,38 +57,55 @@ POST_INSTALL = :
 NORMAL_UNINSTALL = :
 PRE_UNINSTALL = :
 POST_UNINSTALL = :
+host_alias = @host_alias@
+host_triplet = @host@
 CC = @CC@
 MAKEINFO = @MAKEINFO@
 PACKAGE = @PACKAGE@
 RANLIB = @RANLIB@
 VERSION = @VERSION@
 
-CFLAGS = -ggdb
+CFLAGS = -O2
 
-bin_PROGRAMS = wthc wthd
+bin_PROGRAMS = wthc wthd wthxc wthxmld
 
 wthc_SOURCES = wthc.c wth.h version.h
+#wthc_LDADD = $(top_builddir)/libwth.a -lmpatrol -lbfd -liberty
 wthc_LDADD = $(top_builddir)/libwth.a 
 
 wthd_SOURCES = wthd.c wth.h version.h
 wthd_LDADD = $(top_builddir)/libwth.a
 
+wthxc_SOURCES = wthxc.c wth.h version.h 
+wthxc_LDADD = $(top_builddir)/libwthxml.a 		-lmd5 -lwwwcore -lwwwxml 		-lwwwzip -lwwwinit -lwwwapp 		-lwwwhtml -lwwwtelnet -lwwwnews 		-lwwwhttp -lwwwmime -lwwwgopher 		-lwwwftp -lwwwfile -lwwwdir 		-lwwwcache -lwwwstream -lwwwmux 		-lwwwtrans -lwwwutils -lxmlrpc 		-lxmlrpc_client -lxmlrpc_xmlparse -lxmlrpc_xmltok
+
+
+wthxmld_SOURCES = wthxmld.c wth.h version.h
+wthxmld_LDADD = $(top_builddir)/libwthxml.a -lxmlrpc -lxmlrpc_abyss 		-lxmlrpc_abyss_server -lxmlrpc_xmlparse 		-lxmlrpc_xmltok 		-lmd5 -lwwwcore -lwwwxml 		-lwwwzip -lwwwinit -lwwwapp 		-lwwwhtml -lwwwtelnet -lwwwnews 		-lwwwhttp -lwwwmime -lwwwgopher 		-lwwwftp -lwwwfile -lwwwdir 		-lwwwcache -lwwwstream -lwwwmux 		-lwwwtrans -lwwwutils -lxmlrpc 		-lxmlrpc_client -lxmlrpc_xmlparse -lxmlrpc_xmltok
+
+
 noinst_HEADERS = wth.h wthnet.h wthprv.h
 
-lib_LIBRARIES = libwth.a
-libwth_a_SOURCES = libwth.c serial.c net.c wth.h wthnet.h wthprv.h
+lib_LIBRARIES = libwth.a libwthxml.a
+libwth_a_SOURCES = libwth.c data.c serial.c net.c wth.h wthnet.h wthprv.h 
+libwthxml_a_SOURCES = libwth.c dataxml.c serial.c net.c xml.c wth.h wthnet.h wthprv.h 
+
+EXTRA_DIST = abyss/conf/abyss.conf wth-xmlrpc
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
+CONFIG_HEADER = config.h
 CONFIG_CLEAN_FILES = 
 LIBRARIES =  $(lib_LIBRARIES)
 
 
-DEFS = @DEFS@ -I. -I$(srcdir) 
+DEFS = @DEFS@ -I. -I$(srcdir) -I.
 CPPFLAGS = @CPPFLAGS@
 LDFLAGS = @LDFLAGS@
 LIBS = @LIBS@
 libwth_a_LIBADD = 
-libwth_a_OBJECTS =  libwth.o serial.o net.o
+libwth_a_OBJECTS =  libwth.o data.o serial.o net.o
+libwthxml_a_LIBADD = 
+libwthxml_a_OBJECTS =  libwth.o dataxml.o serial.o net.o xml.o
 AR = ar
 PROGRAMS =  $(bin_PROGRAMS)
 
@@ -98,13 +115,20 @@ wthc_LDFLAGS =
 wthd_OBJECTS =  wthd.o
 wthd_DEPENDENCIES =  $(top_builddir)/libwth.a
 wthd_LDFLAGS = 
+wthxc_OBJECTS =  wthxc.o
+wthxc_DEPENDENCIES =  $(top_builddir)/libwthxml.a
+wthxc_LDFLAGS = 
+wthxmld_OBJECTS =  wthxmld.o
+wthxmld_DEPENDENCIES =  $(top_builddir)/libwthxml.a
+wthxmld_LDFLAGS = 
 COMPILE = $(CC) $(DEFS) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS)
 CCLD = $(CC)
 LINK = $(CCLD) $(AM_CFLAGS) $(CFLAGS) $(LDFLAGS) -o $@
 HEADERS =  $(noinst_HEADERS)
 
-DIST_COMMON =  README AUTHORS COPYING ChangeLog INSTALL Makefile.am \
-Makefile.in NEWS aclocal.m4 configure configure.in install-sh missing \
+DIST_COMMON =  README ./stamp-h.in AUTHORS COPYING ChangeLog INSTALL \
+Makefile.am Makefile.in NEWS acconfig.h aclocal.m4 config.guess \
+config.h.in config.sub configure configure.in install-sh missing \
 mkinstalldirs
 
 
@@ -112,10 +136,11 @@ DISTFILES = $(DIST_COMMON) $(SOURCES) $(HEADERS) $(TEXINFOS) $(EXTRA_DIST)
 
 TAR = tar
 GZIP_ENV = --best
-DEP_FILES =  .deps/libwth.P .deps/net.P .deps/serial.P .deps/wthc.P \
-.deps/wthd.P
-SOURCES = $(libwth_a_SOURCES) $(wthc_SOURCES) $(wthd_SOURCES)
-OBJECTS = $(libwth_a_OBJECTS) $(wthc_OBJECTS) $(wthd_OBJECTS)
+DEP_FILES =  .deps/data.P .deps/dataxml.P .deps/libwth.P .deps/net.P \
+.deps/serial.P .deps/wthc.P .deps/wthd.P .deps/wthxc.P .deps/wthxmld.P \
+.deps/xml.P
+SOURCES = $(libwth_a_SOURCES) $(libwthxml_a_SOURCES) $(wthc_SOURCES) $(wthd_SOURCES) $(wthxc_SOURCES) $(wthxmld_SOURCES)
+OBJECTS = $(libwth_a_OBJECTS) $(libwthxml_a_OBJECTS) $(wthc_OBJECTS) $(wthd_OBJECTS) $(wthxc_OBJECTS) $(wthxmld_OBJECTS)
 
 all: all-redirect
 .SUFFIXES:
@@ -134,6 +159,34 @@ config.status: $(srcdir)/configure $(CONFIG_STATUS_DEPENDENCIES)
 	$(SHELL) ./config.status --recheck
 $(srcdir)/configure: $(srcdir)/configure.in $(ACLOCAL_M4) $(CONFIGURE_DEPENDENCIES)
 	cd $(srcdir) && $(AUTOCONF)
+
+config.h: stamp-h
+	@if test ! -f $@; then \
+		rm -f stamp-h; \
+		$(MAKE) stamp-h; \
+	else :; fi
+stamp-h: $(srcdir)/config.h.in $(top_builddir)/config.status
+	cd $(top_builddir) \
+	  && CONFIG_FILES= CONFIG_HEADERS=config.h \
+	     $(SHELL) ./config.status
+	@echo timestamp > stamp-h 2> /dev/null
+$(srcdir)/config.h.in: $(srcdir)/stamp-h.in
+	@if test ! -f $@; then \
+		rm -f $(srcdir)/stamp-h.in; \
+		$(MAKE) $(srcdir)/stamp-h.in; \
+	else :; fi
+$(srcdir)/stamp-h.in: $(top_srcdir)/configure.in $(ACLOCAL_M4) acconfig.h
+	cd $(top_srcdir) && $(AUTOHEADER)
+	@echo timestamp > $(srcdir)/stamp-h.in 2> /dev/null
+
+mostlyclean-hdr:
+
+clean-hdr:
+
+distclean-hdr:
+	-rm -f config.h
+
+maintainer-clean-hdr:
 
 mostlyclean-libLIBRARIES:
 
@@ -188,6 +241,11 @@ libwth.a: $(libwth_a_OBJECTS) $(libwth_a_DEPENDENCIES)
 	$(AR) cru libwth.a $(libwth_a_OBJECTS) $(libwth_a_LIBADD)
 	$(RANLIB) libwth.a
 
+libwthxml.a: $(libwthxml_a_OBJECTS) $(libwthxml_a_DEPENDENCIES)
+	-rm -f libwthxml.a
+	$(AR) cru libwthxml.a $(libwthxml_a_OBJECTS) $(libwthxml_a_LIBADD)
+	$(RANLIB) libwthxml.a
+
 mostlyclean-binPROGRAMS:
 
 clean-binPROGRAMS:
@@ -221,6 +279,14 @@ wthd: $(wthd_OBJECTS) $(wthd_DEPENDENCIES)
 	@rm -f wthd
 	$(LINK) $(wthd_LDFLAGS) $(wthd_OBJECTS) $(wthd_LDADD) $(LIBS)
 
+wthxc: $(wthxc_OBJECTS) $(wthxc_DEPENDENCIES)
+	@rm -f wthxc
+	$(LINK) $(wthxc_LDFLAGS) $(wthxc_OBJECTS) $(wthxc_LDADD) $(LIBS)
+
+wthxmld: $(wthxmld_OBJECTS) $(wthxmld_DEPENDENCIES)
+	@rm -f wthxmld
+	$(LINK) $(wthxmld_LDFLAGS) $(wthxmld_OBJECTS) $(wthxmld_LDADD) $(LIBS)
+
 tags: TAGS
 
 ID: $(HEADERS) $(SOURCES) $(LISP)
@@ -231,15 +297,15 @@ ID: $(HEADERS) $(SOURCES) $(LISP)
 	here=`pwd` && cd $(srcdir) \
 	  && mkid -f$$here/ID $$unique $(LISP)
 
-TAGS:  $(HEADERS) $(SOURCES)  $(TAGS_DEPENDENCIES) $(LISP)
+TAGS:  $(HEADERS) $(SOURCES) config.h.in $(TAGS_DEPENDENCIES) $(LISP)
 	tags=; \
 	here=`pwd`; \
 	list='$(SOURCES) $(HEADERS)'; \
 	unique=`for i in $$list; do echo $$i; done | \
 	  awk '    { files[$$0] = 1; } \
 	       END { for (i in files) print i; }'`; \
-	test -z "$(ETAGS_ARGS)$$unique$(LISP)$$tags" \
-	  || (cd $(srcdir) && etags $(ETAGS_ARGS) $$tags  $$unique $(LISP) -o $$here/TAGS)
+	test -z "$(ETAGS_ARGS)config.h.in$$unique$(LISP)$$tags" \
+	  || (cd $(srcdir) && etags $(ETAGS_ARGS) $$tags config.h.in $$unique $(LISP) -o $$here/TAGS)
 
 mostlyclean-tags:
 
@@ -293,6 +359,7 @@ distdir: $(DISTFILES)
 	distdir=`cd $(distdir) && pwd`; \
 	cd $(top_srcdir) \
 	  && $(AUTOMAKE) --include-deps --build-dir=$$here --srcdir-name=$(top_srcdir) --output-dir=$$top_distdir --gnu Makefile
+	$(mkinstalldirs) $(distdir)/abyss/conf
 	@for file in $(DISTFILES); do \
 	  d=$(srcdir); \
 	  if test -d $$d/$$file; then \
@@ -343,6 +410,9 @@ check-am: all-am
 check: check-am
 installcheck-am:
 installcheck: installcheck-am
+all-recursive-am: config.h
+	$(MAKE) $(AM_MAKEFLAGS) all-recursive
+
 install-exec-am: install-libLIBRARIES install-binPROGRAMS
 install-exec: install-exec-am
 
@@ -354,7 +424,7 @@ install-am: all-am
 install: install-am
 uninstall-am: uninstall-libLIBRARIES uninstall-binPROGRAMS
 uninstall: uninstall-am
-all-am: Makefile $(LIBRARIES) $(PROGRAMS) $(HEADERS)
+all-am: Makefile $(LIBRARIES) $(PROGRAMS) $(HEADERS) config.h
 all-redirect: all-am
 install-strip:
 	$(MAKE) $(AM_MAKEFLAGS) AM_INSTALL_PROGRAM_FLAGS=-s install
@@ -371,25 +441,25 @@ distclean-generic:
 	-rm -f config.cache config.log stamp-h stamp-h[0-9]*
 
 maintainer-clean-generic:
-mostlyclean-am:  mostlyclean-libLIBRARIES mostlyclean-compile \
-		mostlyclean-binPROGRAMS mostlyclean-tags \
-		mostlyclean-depend mostlyclean-generic
+mostlyclean-am:  mostlyclean-hdr mostlyclean-libLIBRARIES \
+		mostlyclean-compile mostlyclean-binPROGRAMS \
+		mostlyclean-tags mostlyclean-depend mostlyclean-generic
 
 mostlyclean: mostlyclean-am
 
-clean-am:  clean-libLIBRARIES clean-compile clean-binPROGRAMS clean-tags \
-		clean-depend clean-generic mostlyclean-am
+clean-am:  clean-hdr clean-libLIBRARIES clean-compile clean-binPROGRAMS \
+		clean-tags clean-depend clean-generic mostlyclean-am
 
 clean: clean-am
 
-distclean-am:  distclean-libLIBRARIES distclean-compile \
+distclean-am:  distclean-hdr distclean-libLIBRARIES distclean-compile \
 		distclean-binPROGRAMS distclean-tags distclean-depend \
 		distclean-generic clean-am
 
 distclean: distclean-am
 	-rm -f config.status
 
-maintainer-clean-am:  maintainer-clean-libLIBRARIES \
+maintainer-clean-am:  maintainer-clean-hdr maintainer-clean-libLIBRARIES \
 		maintainer-clean-compile maintainer-clean-binPROGRAMS \
 		maintainer-clean-tags maintainer-clean-depend \
 		maintainer-clean-generic distclean-am
@@ -399,8 +469,9 @@ maintainer-clean-am:  maintainer-clean-libLIBRARIES \
 maintainer-clean: maintainer-clean-am
 	-rm -f config.status
 
-.PHONY: mostlyclean-libLIBRARIES distclean-libLIBRARIES \
-clean-libLIBRARIES maintainer-clean-libLIBRARIES uninstall-libLIBRARIES \
+.PHONY: mostlyclean-hdr distclean-hdr clean-hdr maintainer-clean-hdr \
+mostlyclean-libLIBRARIES distclean-libLIBRARIES clean-libLIBRARIES \
+maintainer-clean-libLIBRARIES uninstall-libLIBRARIES \
 install-libLIBRARIES mostlyclean-compile distclean-compile \
 clean-compile maintainer-clean-compile mostlyclean-binPROGRAMS \
 distclean-binPROGRAMS clean-binPROGRAMS maintainer-clean-binPROGRAMS \
@@ -408,12 +479,27 @@ uninstall-binPROGRAMS install-binPROGRAMS tags mostlyclean-tags \
 distclean-tags clean-tags maintainer-clean-tags distdir \
 mostlyclean-depend distclean-depend clean-depend \
 maintainer-clean-depend info-am info dvi-am dvi check check-am \
-installcheck-am installcheck install-exec-am install-exec \
-install-data-am install-data install-am install uninstall-am uninstall \
-all-redirect all-am all installdirs mostlyclean-generic \
-distclean-generic clean-generic maintainer-clean-generic clean \
-mostlyclean distclean maintainer-clean
+installcheck-am installcheck all-recursive-am install-exec-am \
+install-exec install-data-am install-data install-am install \
+uninstall-am uninstall all-redirect all-am all installdirs \
+mostlyclean-generic distclean-generic clean-generic \
+maintainer-clean-generic clean mostlyclean distclean maintainer-clean
 
+
+xmltest: wthxmld wthxc
+	-killall wthxmld
+	-wthxmld abyss/conf/abyss.conf
+	-wthxc -c0 -h localhost -x
+	-wthxc -c5 -h localhost -x
+	-wthxc -c6 -i5 -h localhost -x	
+	-wthxc -c5 -h localhost -x
+	-wthxc -c6 -i3 -h localhost -x	
+	-wthxc -c5 -h localhost -x
+	-wthxc -c4 -h localhost -x
+	-wthxc -c5 -h localhost -x
+	-wthxc -c3 -h localhost -x
+	-wthxc -c5 -h localhost -x
+	-killall wthxmld
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
