--- a/wth_foundation/wth/trunk/Makefile.am
+++ b/wth_foundation/wth/trunk/Makefile.am
@@ -1,5 +1,5 @@
 noinst_LIBRARIES = libwth.a libwthxml.a
-libwth_a_SOURCES = libwth.c data.c serial.c net.c wth.h wthnet.h wthprv.h 
+libwth_a_SOURCES = libwth.c serial.c net.c wthutil.c wth.h wthnet.h wthprv.h 
 
 #libwthxml_a_SOURCES = libwth.c xml/dataxml.c serial.c net.c xml/xml.c wth.h wthnet.h wthprv.h 
 
@@ -8,6 +8,7 @@ bin_PROGRAMS = wthc wthd
 #bin_PROGRAMS = wthc wthd wthxc wthxmld 
 
 wthc_SOURCES = wthc.c wth.h
+#wthc_LDADD = libwth.a -L/usr/local/lib -lmpatrol
 wthc_LDADD = libwth.a 
 
 wthd_SOURCES = wthd.c wth.h 
