new version for wth server initiated

--- a/wth_foundation/wth/trunk/Makefile
+++ b/wth_foundation/wth/trunk/Makefile
@@ -39,7 +39,7 @@ POST_UNINSTALL = :
 build_triplet = i386-unknown-freebsd6.1
 host_triplet = i386-unknown-freebsd6.1
 target_triplet = i386-unknown-freebsd6.1
-bin_PROGRAMS = wthc$(EXEEXT) wthd$(EXEEXT)
+bin_PROGRAMS = wthc$(EXEEXT) wthd$(EXEEXT) wthnewd$(EXEEXT)
 DIST_COMMON = README $(am__configure_deps) $(noinst_HEADERS) \
 	$(srcdir)/Makefile.am $(srcdir)/Makefile.in \
 	$(srcdir)/config.h.in $(top_srcdir)/configure AUTHORS COPYING \
@@ -76,6 +76,10 @@ wthc_DEPENDENCIES = libwth.a
 am_wthd_OBJECTS = wthd.$(OBJEXT)
 wthd_OBJECTS = $(am_wthd_OBJECTS)
 wthd_DEPENDENCIES = libwth.a
+am_wthnewd_OBJECTS = wthnewd.$(OBJEXT) utilnew.$(OBJEXT) \
+	pcwsr.$(OBJEXT) ws2000.$(OBJEXT)
+wthnewd_OBJECTS = $(am_wthnewd_OBJECTS)
+wthnewd_LDADD = $(LDADD)
 DEFAULT_INCLUDES = -I. -I$(srcdir) -I.
 depcomp = $(SHELL) $(top_srcdir)/depcomp
 am__depfiles_maybe = depfiles
@@ -84,9 +88,9 @@ COMPILE = $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) \
 CCLD = $(CC)
 LINK = $(CCLD) $(AM_CFLAGS) $(CFLAGS) $(AM_LDFLAGS) $(LDFLAGS) -o $@
 SOURCES = $(libwth_a_SOURCES) libwthxml.c $(wthc_SOURCES) \
-	$(wthd_SOURCES)
+	$(wthd_SOURCES) $(wthnewd_SOURCES)
 DIST_SOURCES = $(libwth_a_SOURCES) libwthxml.c $(wthc_SOURCES) \
-	$(wthd_SOURCES)
+	$(wthd_SOURCES) $(wthnewd_SOURCES)
 HEADERS = $(noinst_HEADERS)
 ETAGS = etags
 CTAGS = ctags
@@ -195,6 +199,7 @@ wthc_LDADD = libwth.a
 wthd_SOURCES = wthd.c wth.h 
 #wthd_LDADD = $(top_builddir)/libwth.a -lmpatrol -lbfd -liberty
 wthd_LDADD = libwth.a
+wthnewd_SOURCES = wthnew.h wthnewd.c utilnew.c pcwsr.c ws2000.c
 
 #wthxc_SOURCES = wthxc.c wth.h 
 #wthxc_LDADD = $(top_builddir)/libwthxml.a \
@@ -316,6 +321,9 @@ wthc$(EXEEXT): $(wthc_OBJECTS) $(wthc_DEPENDENCIES)
 wthd$(EXEEXT): $(wthd_OBJECTS) $(wthd_DEPENDENCIES) 
 	@rm -f wthd$(EXEEXT)
 	$(LINK) $(wthd_LDFLAGS) $(wthd_OBJECTS) $(wthd_LDADD) $(LIBS)
+wthnewd$(EXEEXT): $(wthnewd_OBJECTS) $(wthnewd_DEPENDENCIES) 
+	@rm -f wthnewd$(EXEEXT)
+	$(LINK) $(wthnewd_LDFLAGS) $(wthnewd_OBJECTS) $(wthnewd_LDADD) $(LIBS)
 
 mostlyclean-compile:
 	-rm -f *.$(OBJEXT)
@@ -326,9 +334,13 @@ distclean-compile:
 include ./$(DEPDIR)/libwth.Po
 include ./$(DEPDIR)/libwthxml.Po
 include ./$(DEPDIR)/net.Po
+include ./$(DEPDIR)/pcwsr.Po
 include ./$(DEPDIR)/serial.Po
+include ./$(DEPDIR)/utilnew.Po
+include ./$(DEPDIR)/ws2000.Po
 include ./$(DEPDIR)/wthc.Po
 include ./$(DEPDIR)/wthd.Po
+include ./$(DEPDIR)/wthnewd.Po
 include ./$(DEPDIR)/wthutil.Po
 
 .c.o:
