--- a/wth_foundation/wth/trunk/Makefile.am
+++ b/wth_foundation/wth/trunk/Makefile.am
@@ -3,8 +3,7 @@ libwth_a_SOURCES = libwth.c serial.c net.c wthutil.c wth.h wthnet.h wthprv.h
 
 #libwthxml_a_SOURCES = libwth.c xml/dataxml.c serial.c net.c xml/xml.c wth.h wthnet.h wthprv.h 
 
-
-bin_PROGRAMS = wthc wthd
+bin_PROGRAMS = wthc wthd wthnewd
 #bin_PROGRAMS = wthc wthd wthxc wthxmld 
 
 wthc_SOURCES = wthc.c wth.h
@@ -14,6 +13,8 @@ wthc_LDADD = libwth.a
 wthd_SOURCES = wthd.c wth.h 
 #wthd_LDADD = $(top_builddir)/libwth.a -lmpatrol -lbfd -liberty
 wthd_LDADD = libwth.a
+
+wthnewd_SOURCES = wthnew.h wthnewd.c utilnew.c pcwsr.c ws2000.c
 
 #wthxc_SOURCES = wthxc.c wth.h 
 #wthxc_LDADD = $(top_builddir)/libwthxml.a \
