--- a/wth_foundation/wth/trunk/Makefile
+++ b/wth_foundation/wth/trunk/Makefile
@@ -36,9 +36,9 @@ POST_INSTALL = :
 NORMAL_UNINSTALL = :
 PRE_UNINSTALL = :
 POST_UNINSTALL = :
-build_triplet = i386-unknown-freebsd6.1
-host_triplet = i386-unknown-freebsd6.1
-target_triplet = i386-unknown-freebsd6.1
+build_triplet = i386-unknown-freebsd6.2
+host_triplet = i386-unknown-freebsd6.2
+target_triplet = i386-unknown-freebsd6.2
 bin_PROGRAMS = wthc$(EXEEXT) wthd$(EXEEXT) wthnewd$(EXEEXT) \
 	wthnewpd$(EXEEXT)
 DIST_COMMON = README $(am__configure_deps) $(noinst_HEADERS) \
@@ -110,14 +110,14 @@ DIST_ARCHIVES = $(distdir).tar.gz
 GZIP_ENV = --best
 distuninstallcheck_listfiles = find . -type f -print
 distcleancheck_listfiles = find . -type f -print
-ACLOCAL = ${SHELL} /proj/wetter/software/serial/wth/trunk/missing --run aclocal-1.9
+ACLOCAL = ${SHELL} /proj/wetter/software/serial/wth/wth_foundation/wth/trunk/missing --run aclocal-1.9
 AMDEP_FALSE = #
 AMDEP_TRUE = 
-AMTAR = ${SHELL} /proj/wetter/software/serial/wth/trunk/missing --run tar
-AUTOCONF = ${SHELL} /proj/wetter/software/serial/wth/trunk/missing --run autoconf
-AUTOHEADER = ${SHELL} /proj/wetter/software/serial/wth/trunk/missing --run autoheader
-AUTOMAKE = ${SHELL} /proj/wetter/software/serial/wth/trunk/missing --run automake-1.9
-AWK = gawk
+AMTAR = ${SHELL} /proj/wetter/software/serial/wth/wth_foundation/wth/trunk/missing --run tar
+AUTOCONF = ${SHELL} /proj/wetter/software/serial/wth/wth_foundation/wth/trunk/missing --run autoconf
+AUTOHEADER = ${SHELL} /proj/wetter/software/serial/wth/wth_foundation/wth/trunk/missing --run autoheader
+AUTOMAKE = ${SHELL} /proj/wetter/software/serial/wth/wth_foundation/wth/trunk/missing --run automake-1.9
+AWK = nawk
 CC = gcc
 CCDEPMODE = depmode=gcc3
 CFLAGS = -g -O2 -DFREEBSD -Wall
@@ -139,7 +139,7 @@ LDFLAGS =
 LIBOBJS = 
 LIBS = 
 LTLIBOBJS = 
-MAKEINFO = ${SHELL} /proj/wetter/software/serial/wth/trunk/missing --run makeinfo
+MAKEINFO = ${SHELL} /proj/wetter/software/serial/wth/wth_foundation/wth/trunk/missing --run makeinfo
 OBJEXT = o
 PACKAGE = wth
 PACKAGE_BUGREPORT = 
@@ -164,21 +164,21 @@ am__quote =
 am__tar = ${AMTAR} chof - "$$tardir"
 am__untar = ${AMTAR} xf -
 bindir = ${exec_prefix}/bin
-build = i386-unknown-freebsd6.1
+build = i386-unknown-freebsd6.2
 build_alias = 
 build_cpu = i386
-build_os = freebsd6.1
+build_os = freebsd6.2
 build_vendor = unknown
 datadir = ${prefix}/share
 exec_prefix = ${prefix}
-host = i386-unknown-freebsd6.1
+host = i386-unknown-freebsd6.2
 host_alias = 
 host_cpu = i386
-host_os = freebsd6.1
+host_os = freebsd6.2
 host_vendor = unknown
 includedir = ${prefix}/include
 infodir = ${prefix}/info
-install_sh = /proj/wetter/software/serial/wth/trunk/install-sh
+install_sh = /proj/wetter/software/serial/wth/wth_foundation/wth/trunk/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localstatedir = ${prefix}/var
@@ -190,10 +190,10 @@ program_transform_name = s,x,x,
 sbindir = ${exec_prefix}/sbin
 sharedstatedir = ${prefix}/com
 sysconfdir = ${prefix}/etc
-target = i386-unknown-freebsd6.1
+target = i386-unknown-freebsd6.2
 target_alias = 
 target_cpu = i386
-target_os = freebsd6.1
+target_os = freebsd6.2
 target_vendor = unknown
 noinst_LIBRARIES = libwth.a libwthxml.a
 libwth_a_SOURCES = libwth.c serial.c net.c wthutil.c wth.h wthnet.h wthprv.h 
@@ -206,7 +206,7 @@ wthd_SOURCES = wthd.c wth.h
 wthd_LDADD = libwth.a
 wthnewd_SOURCES = wthnew.h wthnewd.c utilnew.c pcwsr.c ws2000.c netnew.c
 wthnewpd_SOURCES = wthnew.h wthnewpd.c utilnew.c pcwsr.c ws2000.c netnew.c
-wthnewpd_LDADD = -lpthread
+wthnewpd_LDADD = -L/usr/local/lib -lpthread -lsqlite3
 
 #wthxc_SOURCES = wthxc.c wth.h 
 #wthxc_LDADD = $(top_builddir)/libwthxml.a \
