--- a/wth_foundation/wth/trunk/rrdtool/rrdproc.conf
+++ b/wth_foundation/wth/trunk/rrdtool/rrdproc.conf
@@ -3,7 +3,7 @@
 #
 my $DEBUG = 1; # set $DEBUG = 1, or set environment variable DEBUG=1 
 
-my %extraopts = (
+%extraopts = (
     PressureI => {
         rrdfile => "PressureI.rrd",
         imgfile => "PressureI.png",
@@ -14,7 +14,7 @@ my %extraopts = (
     },
 );
 
-my %createopts = ( 
+%createopts = ( 
     Temp4 => {
         "--start" => 973709200,
         "--step"  => 300,
@@ -38,59 +38,51 @@ my %createopts = (
 );
 
 
-my %createdefs = (
+%createdefs = (
     Temp4 => [
-       "DS:Temp4:GAUGE:600:-30:70",
+       "DS:Temperature:GAUGE:600:-30:70",
        "RRA:AVERAGE:0.5:1:600",
        "RRA:AVERAGE:0.5:6:700",
        "RRA:AVERAGE:0.5:24:775",
        "RRA:AVERAGE:0.5:288:797",
-       "RRA:MIN:0.5:1:600",
-       "RRA:MIN:0.5:6:700",
-       "RRA:MIN:0.5:24:775",
-       "RRA:MIN:0.5:288:797",
-       "RRA:MAX:0.5:1:600",
-       "RRA:MAX:0.5:6:700",
-       "RRA:MAX:0.5:24:775",
-       "RRA:MAX:0.5:288:797",
        "RRA:LAST:0.5:1:1"
     ],
     Humidity4 => [
-       "DS:Humidity4:GAUGE:600:20:100",
+       "DS:Humidity:GAUGE:600:0:100",
        "RRA:AVERAGE:0.5:1:600",
        "RRA:AVERAGE:0.5:6:700",
        "RRA:AVERAGE:0.5:24:775",
        "RRA:AVERAGE:0.5:288:797",
-       "RRA:MIN:0.5:1:600",
-       "RRA:MIN:0.5:6:700",
-       "RRA:MIN:0.5:24:775",
-       "RRA:MIN:0.5:288:797",
-       "RRA:MAX:0.5:1:600",
-       "RRA:MAX:0.5:6:700",
-       "RRA:MAX:0.5:24:775",
-       "RRA:MAX:0.5:288:797",
        "RRA:LAST:0.5:1:1" 
     ],
-    PressureI => [
-       "DS:PressureI:GAUGE:600:800:1100",
+    TempI => [
+       "DS:Temperature:GAUGE:600:-30:70",
        "RRA:AVERAGE:0.5:1:600",
        "RRA:AVERAGE:0.5:6:700",
        "RRA:AVERAGE:0.5:24:775",
        "RRA:AVERAGE:0.5:288:797",
-       "RRA:MIN:0.5:1:600",
-       "RRA:MIN:0.5:6:700",
-       "RRA:MIN:0.5:24:775",
-       "RRA:MIN:0.5:288:797",
-       "RRA:MAX:0.5:1:600",
-       "RRA:MAX:0.5:6:700",
-       "RRA:MAX:0.5:24:775",
-       "RRA:MAX:0.5:288:797",
+       "RRA:LAST:0.5:1:1"
+    ],
+    HumidityI => [
+       "DS:Humidity:GAUGE:600:0:100",
+       "RRA:AVERAGE:0.5:1:600",
+       "RRA:AVERAGE:0.5:6:700",
+       "RRA:AVERAGE:0.5:24:775",
+       "RRA:AVERAGE:0.5:288:797",
+       "RRA:LAST:0.5:1:1" 
+    ],
+    Pressure4 => [
+       "DS:Pressure:GAUGE:600:800:1100",
+       "RRA:AVERAGE:0.5:1:600",
+       "RRA:AVERAGE:0.5:6:700",
+       "RRA:AVERAGE:0.5:24:775",
+       "RRA:AVERAGE:0.5:288:797",
        "RRA:LAST:0.5:1:1" 
     ]
 
 );
 
-my %fetchopts = (
+%fetchopts = (
    PressureI => {
       "--start" => "-6000",
       LAST      => undef
@@ -105,7 +97,7 @@ my %fetchopts = (
    }
 );
 
-my %graphopts = (
+%graphopts = (
     PressureI => {
         "--start" => -86400,
         "--title", "Atmospheric Pressure",
@@ -139,7 +131,7 @@ my %graphopts = (
     }
 );
 
-my %graphdefs = (
+%graphdefs = (
      PressureI => [
         "DEF:pressure=/proj/wetter/logs/sens20.rrd:press:AVERAGE",
         "CDEF:nnpress=1.055615,pressure,*",
