--- a/wth_foundation/wth/trunk/rrdtool/rrdproc.conf
+++ b/wth_foundation/wth/trunk/rrdtool/rrdproc.conf
@@ -12,6 +12,18 @@ my $DEBUG = 1; # set $DEBUG = 1, or set environment variable DEBUG=1
         rrdfile => "TempI.rrd",
         imgfile => "TempI.png",
     },
+    Outdoor16 => {
+        rrdfile => "Outdoor16.rrd",
+        imgfile => [ "TempI.png", "HumI.png" , "PressureI.png" ]
+    },
+    Outdoor18 => {
+        rrdfile => "Outdoor18.rrd",
+        imgfile => [ "TempI.png", "HumI.png" , "PressureI.png" ]
+    },
+    Indoor71 => {
+        rrdfile => "Indoor71.rrd",
+        imgfile => [ "TempI.png", "HumI.png" , "PressureI.png" ]
+    }
 );
 
 %createopts = ( 
@@ -32,6 +44,18 @@ my $DEBUG = 1; # set $DEBUG = 1, or set environment variable DEBUG=1
         "--step"  => 300,
     },
     HumidityI => {
+        "--start" => 973709200,
+        "--step"  => 300,
+    },
+    Outdoor16 => {
+        "--start" => 973709200,
+        "--step"  => 300,
+    },
+    Outdoor18 => {
+        "--start" => 973709200,
+        "--step"  => 300,
+    },
+    Indoor71 => {
         "--start" => 973709200,
         "--step"  => 300,
     },
@@ -78,8 +102,35 @@ my $DEBUG = 1; # set $DEBUG = 1, or set environment variable DEBUG=1
        "RRA:AVERAGE:0.5:24:775",
        "RRA:AVERAGE:0.5:288:797",
        "RRA:LAST:0.5:1:1" 
+    ],
+    Outdoor16 => [
+       "DS:Temperature:GAUGE:600:-30:70",
+       "DS:Humidity:GAUGE:600:0:100",
+       "RRA:AVERAGE:0.5:1:600",
+       "RRA:AVERAGE:0.5:6:700",
+       "RRA:AVERAGE:0.5:24:775",
+       "RRA:AVERAGE:0.5:288:797",
+       "RRA:LAST:0.5:1:1" 
+    ],
+    Outdoor18 => [
+       "DS:Temperature:GAUGE:600:-30:70",
+       "DS:Humidity:GAUGE:600:0:100",
+       "RRA:AVERAGE:0.5:1:600",
+       "RRA:AVERAGE:0.5:6:700",
+       "RRA:AVERAGE:0.5:24:775",
+       "RRA:AVERAGE:0.5:288:797",
+       "RRA:LAST:0.5:1:1" 
+    ],
+    Indoor71 => [
+       "DS:Temperature:GAUGE:600:-30:70",
+       "DS:Humidity:GAUGE:600:0:100",
+       "DS:Pressure:GAUGE:600:800:1100",
+       "RRA:AVERAGE:0.5:1:600",
+       "RRA:AVERAGE:0.5:6:700",
+       "RRA:AVERAGE:0.5:24:775",
+       "RRA:AVERAGE:0.5:288:797",
+       "RRA:LAST:0.5:1:1" 
     ]
-
 );
 
 %fetchopts = (
@@ -92,6 +143,18 @@ my $DEBUG = 1; # set $DEBUG = 1, or set environment variable DEBUG=1
       LAST      => undef
    },
    HumidityI =>  {
+      "--start" => "-6000",
+      LAST      => undef
+   },
+   Outdoor16 =>  {
+      "--start" => "-6000",
+      LAST      => undef
+   },
+   Outdoor18 =>  {
+      "--start" => "-6000",
+      LAST      => undef
+   },
+   Indoor71 =>  {
       "--start" => "-6000",
       LAST      => undef
    }
@@ -167,4 +230,4 @@ my $DEBUG = 1; # set $DEBUG = 1, or set environment variable DEBUG=1
 @Sensors = ( "Temp4", "Humidity4",
                 "PressureI", "TempI", "HumidityI" );
 
-@Sensors = ( "PressureI", "TempI" );
+@Sensors = ( "Outdoor16", "Outdoor18", "Indoor71" );
