rrdtool integration works

--- a/wth_foundation/wth/trunk/Makefile.am
+++ b/wth_foundation/wth/trunk/Makefile.am
@@ -18,7 +18,7 @@ wthnewd_SOURCES = wthnew.h wthnewd.c utilnew.c pcwsr.c ws2000.c netnew.c
 
 wthnewpd_SOURCES = wthnew.h wthnewpd.c utilnew.c pcwsr.c ws2000.c netnew.c \
   wthdb.c
-wthnewpd_LDADD = -L/usr/local/lib -lpthread -lsqlite3
+wthnewpd_LDADD = -L/usr/local/lib -lpthread -lsqlite3 -lrrd_th
 
 #wthxc_SOURCES = wthxc.c wth.h 
 #wthxc_LDADD = $(top_builddir)/libwthxml.a \
