--- a/wth_foundation/wth/trunk/rrdtool/rrdproc.conf
+++ b/wth_foundation/wth/trunk/rrdtool/rrdproc.conf
@@ -20,9 +20,17 @@ my $DEBUG = 1; # set $DEBUG = 1, or set environment variable DEBUG=1
         rrdfile => "Outdoor18.rrd",
         imgfile => [ "TempI.png", "HumI.png" , "PressureI.png" ]
     },
+    Outdoor28 => {
+        rrdfile => "Outdoor28.rrd",
+        imgfile => [ "TempI.png", "HumI.png" , "PressureI.png" ]
+    },
     Indoor71 => {
         rrdfile => "Indoor71.rrd",
         imgfile => [ "TempI.png", "HumI.png" , "PressureI.png" ]
+    },
+    Rain39 => {
+        rrdfile => "Rain39.rrd",
+        imgfile => [ "Rain39.png" ]
     }
 );
 
@@ -55,7 +63,15 @@ my $DEBUG = 1; # set $DEBUG = 1, or set environment variable DEBUG=1
         "--start" => 973709200,
         "--step"  => 300,
     },
+    Outdoor28 => {
+        "--start" => 973709200,
+        "--step"  => 300,
+    },
     Indoor71 => {
+        "--start" => 973709200,
+        "--step"  => 300,
+    },
+    Rain39 => {
         "--start" => 973709200,
         "--step"  => 300,
     },
@@ -121,10 +137,27 @@ my $DEBUG = 1; # set $DEBUG = 1, or set environment variable DEBUG=1
        "RRA:AVERAGE:0.5:288:797",
        "RRA:LAST:0.5:1:1" 
     ],
+    Outdoor28 => [
+       "DS:Temperature:GAUGE:600:-30:70",
+       "DS:Humidity:GAUGE:600:0:100",
+       "RRA:AVERAGE:0.5:1:600",
+       "RRA:AVERAGE:0.5:6:700",
+       "RRA:AVERAGE:0.5:24:775",
+       "RRA:AVERAGE:0.5:288:797",
+       "RRA:LAST:0.5:1:1" 
+    ],
     Indoor71 => [
        "DS:Temperature:GAUGE:600:-30:70",
        "DS:Humidity:GAUGE:600:0:100",
        "DS:Pressure:GAUGE:600:800:1100",
+       "RRA:AVERAGE:0.5:1:600",
+       "RRA:AVERAGE:0.5:6:700",
+       "RRA:AVERAGE:0.5:24:775",
+       "RRA:AVERAGE:0.5:288:797",
+       "RRA:LAST:0.5:1:1" 
+    ],
+    Rain39 => [
+       "DS:Rainfall:GAUGE:600:0:3999",
        "RRA:AVERAGE:0.5:1:600",
        "RRA:AVERAGE:0.5:6:700",
        "RRA:AVERAGE:0.5:24:775",
@@ -154,7 +187,15 @@ my $DEBUG = 1; # set $DEBUG = 1, or set environment variable DEBUG=1
       "--start" => "-6000",
       LAST      => undef
    },
+   Outdoor28 =>  {
+      "--start" => "-6000",
+      LAST      => undef
+   },
    Indoor71 =>  {
+      "--start" => "-6000",
+      LAST      => undef
+   },
+   Rain39 =>  {
       "--start" => "-6000",
       LAST      => undef
    }
@@ -230,4 +271,4 @@ my $DEBUG = 1; # set $DEBUG = 1, or set environment variable DEBUG=1
 @Sensors = ( "Temp4", "Humidity4",
                 "PressureI", "TempI", "HumidityI" );
 
-@Sensors = ( "Outdoor16", "Outdoor18", "Indoor71" );
+@Sensors = ( "Outdoor16", "Outdoor18", "Outdoor28", "Indoor71", "Rain39" );
