--- a/wth_foundation/wth/trunk/rrdtool/rrdproc.conf
+++ b/wth_foundation/wth/trunk/rrdtool/rrdproc.conf
@@ -24,6 +24,10 @@ my $DEBUG = 1; # set $DEBUG = 1, or set environment variable DEBUG=1
         rrdfile => "Outdoor28.rrd",
         imgfile => [ "TempI.png", "HumI.png" , "PressureI.png" ]
     },
+    Indoorsensor11 => {
+        rrdfile => "Indoorsensor11.rrd",
+        imgfile => [ "TempI.png", "HumI.png" , "PressureI.png" ]
+    },
     Indoor71 => {
         rrdfile => "Indoor71.rrd",
         imgfile => [ "TempI.png", "HumI.png" , "PressureI.png" ]
@@ -64,6 +68,10 @@ my $DEBUG = 1; # set $DEBUG = 1, or set environment variable DEBUG=1
         "--step"  => 300,
     },
     Outdoor28 => {
+        "--start" => 973709200,
+        "--step"  => 300,
+    },
+    Indoorsensor11 => {
         "--start" => 973709200,
         "--step"  => 300,
     },
@@ -146,6 +154,16 @@ my $DEBUG = 1; # set $DEBUG = 1, or set environment variable DEBUG=1
        "RRA:AVERAGE:0.5:288:797",
        "RRA:LAST:0.5:1:1" 
     ],
+    Indoorsensor11 => [
+       "DS:Temperature:GAUGE:600:-30:70",
+       "DS:Humidity:GAUGE:600:0:100",
+       "DS:Pressure:GAUGE:600:800:1100",
+       "RRA:AVERAGE:0.5:1:600",
+       "RRA:AVERAGE:0.5:6:700",
+       "RRA:AVERAGE:0.5:24:775",
+       "RRA:AVERAGE:0.5:288:797",
+       "RRA:LAST:0.5:1:1" 
+    ],
     Indoor71 => [
        "DS:Temperature:GAUGE:600:-30:70",
        "DS:Humidity:GAUGE:600:0:100",
@@ -188,6 +206,10 @@ my $DEBUG = 1; # set $DEBUG = 1, or set environment variable DEBUG=1
       LAST      => undef
    },
    Outdoor28 =>  {
+      "--start" => "-6000",
+      LAST      => undef
+   },
+   Indoorsensor11 =>  {
       "--start" => "-6000",
       LAST      => undef
    },
@@ -271,4 +293,4 @@ my $DEBUG = 1; # set $DEBUG = 1, or set environment variable DEBUG=1
 @Sensors = ( "Temp4", "Humidity4",
                 "PressureI", "TempI", "HumidityI" );
 
-@Sensors = ( "Outdoor16", "Outdoor18", "Outdoor28", "Indoor71", "Rain39" );
+@Sensors = ( "Outdoor16", "Outdoor18", "Outdoor28", "Indoorsensor11", "Indoor71", "Rain39" );
