--- a/wth_foundation/wth/trunk/rrdtool/rrdproc.conf
+++ b/wth_foundation/wth/trunk/rrdtool/rrdproc.conf
@@ -24,8 +24,28 @@ my $DEBUG = 1; # set $DEBUG = 1, or set environment variable DEBUG=1
         rrdfile => "Outdoor28.rrd",
         imgfile => [ "TempI.png", "HumI.png" , "PressureI.png" ]
     },
-    Indoorsensor11 => {
-        rrdfile => "Indoorsensor11.rrd",
+    Sensor1 => {
+        rrdfile => "Sensor1.rrd",
+        imgfile => [ "Temp1.png", "Hum1.png" ]
+    },
+    Sensor3 => {
+        rrdfile => "Sensor3.rrd",
+        imgfile => [ "Temp3.png", "Hum3.png"  ]
+    },
+    Sensor5 => {
+        rrdfile => "Sensor5.rrd",
+        imgfile => [ "Temp5.png", "Hum5.png"  ]
+    },
+    Rainsensor => {
+        rrdfile => "Rainsensor.rrd",
+        imgfile => [ "Rain.png" ]
+    },
+    Windsensor => {
+        rrdfile => "Windsensor.rrd",
+        imgfile => [ "Windspeed.png", "Winddirection.png" , "Windvaration.png" ]
+    },
+    Indoorsensor => {
+        rrdfile => "Indoorsensor.rrd",
         imgfile => [ "TempI.png", "HumI.png" , "PressureI.png" ]
     },
     Indoor71 => {
@@ -71,63 +91,35 @@ my $DEBUG = 1; # set $DEBUG = 1, or set environment variable DEBUG=1
         "--start" => 973709200,
         "--step"  => 300,
     },
-    Indoorsensor11 => {
+    Sensor1 => {
         "--start" => 973709200,
         "--step"  => 300,
     },
-    Indoor71 => {
+    Sensor3 => {
         "--start" => 973709200,
         "--step"  => 300,
     },
-    Rain39 => {
+    Sensor5 => {
         "--start" => 973709200,
         "--step"  => 300,
     },
+    Rainsensor => {
+        "--start" => 973709200,
+        "--step"  => 300,
+    },
+    Windsensor => {
+        "--start" => 973709200,
+        "--step"  => 300,
+    },
+    Indoorsensor => {
+        "--start" => 973709200,
+        "--step"  => 300,
+    }
 );
 
 
 %createdefs = (
-    Temp4 => [
-       "DS:Temperature:GAUGE:600:-30:70",
-       "RRA:AVERAGE:0.5:1:600",
-       "RRA:AVERAGE:0.5:6:700",
-       "RRA:AVERAGE:0.5:24:775",
-       "RRA:AVERAGE:0.5:288:797",
-       "RRA:LAST:0.5:1:1"
-    ],
-    Humidity4 => [
-       "DS:Humidity:GAUGE:600:0:100",
-       "RRA:AVERAGE:0.5:1:600",
-       "RRA:AVERAGE:0.5:6:700",
-       "RRA:AVERAGE:0.5:24:775",
-       "RRA:AVERAGE:0.5:288:797",
-       "RRA:LAST:0.5:1:1" 
-    ],
-    TempI => [
-       "DS:Temperature:GAUGE:600:-30:70",
-       "RRA:AVERAGE:0.5:1:600",
-       "RRA:AVERAGE:0.5:6:700",
-       "RRA:AVERAGE:0.5:24:775",
-       "RRA:AVERAGE:0.5:288:797",
-       "RRA:LAST:0.5:1:1"
-    ],
-    HumidityI => [
-       "DS:Humidity:GAUGE:600:0:100",
-       "RRA:AVERAGE:0.5:1:600",
-       "RRA:AVERAGE:0.5:6:700",
-       "RRA:AVERAGE:0.5:24:775",
-       "RRA:AVERAGE:0.5:288:797",
-       "RRA:LAST:0.5:1:1" 
-    ],
-    Pressure4 => [
-       "DS:Pressure:GAUGE:600:800:1100",
-       "RRA:AVERAGE:0.5:1:600",
-       "RRA:AVERAGE:0.5:6:700",
-       "RRA:AVERAGE:0.5:24:775",
-       "RRA:AVERAGE:0.5:288:797",
-       "RRA:LAST:0.5:1:1" 
-    ],
-    Outdoor16 => [
+    Sensor1 => [
        "DS:Temperature:GAUGE:600:-30:70",
        "DS:Humidity:GAUGE:600:0:100",
        "RRA:AVERAGE:0.5:1:600",
@@ -136,7 +128,7 @@ my $DEBUG = 1; # set $DEBUG = 1, or set environment variable DEBUG=1
        "RRA:AVERAGE:0.5:288:797",
        "RRA:LAST:0.5:1:1" 
     ],
-    Outdoor18 => [
+    Sensor3 => [
        "DS:Temperature:GAUGE:600:-30:70",
        "DS:Humidity:GAUGE:600:0:100",
        "RRA:AVERAGE:0.5:1:600",
@@ -145,7 +137,7 @@ my $DEBUG = 1; # set $DEBUG = 1, or set environment variable DEBUG=1
        "RRA:AVERAGE:0.5:288:797",
        "RRA:LAST:0.5:1:1" 
     ],
-    Outdoor28 => [
+    Sensor5 => [
        "DS:Temperature:GAUGE:600:-30:70",
        "DS:Humidity:GAUGE:600:0:100",
        "RRA:AVERAGE:0.5:1:600",
@@ -154,28 +146,28 @@ my $DEBUG = 1; # set $DEBUG = 1, or set environment variable DEBUG=1
        "RRA:AVERAGE:0.5:288:797",
        "RRA:LAST:0.5:1:1" 
     ],
-    Indoorsensor11 => [
-       "DS:Temperature:GAUGE:600:-30:70",
-       "DS:Humidity:GAUGE:600:0:100",
-       "DS:Pressure:GAUGE:600:800:1100",
-       "RRA:AVERAGE:0.5:1:600",
-       "RRA:AVERAGE:0.5:6:700",
-       "RRA:AVERAGE:0.5:24:775",
-       "RRA:AVERAGE:0.5:288:797",
-       "RRA:LAST:0.5:1:1" 
-    ],
-    Indoor71 => [
-       "DS:Temperature:GAUGE:600:-30:70",
-       "DS:Humidity:GAUGE:600:0:100",
-       "DS:Pressure:GAUGE:600:800:1100",
-       "RRA:AVERAGE:0.5:1:600",
-       "RRA:AVERAGE:0.5:6:700",
-       "RRA:AVERAGE:0.5:24:775",
-       "RRA:AVERAGE:0.5:288:797",
-       "RRA:LAST:0.5:1:1" 
-    ],
-    Rain39 => [
+    Rainsensor => [
        "DS:Rainfall:GAUGE:600:0:3999",
+       "RRA:AVERAGE:0.5:1:600",
+       "RRA:AVERAGE:0.5:6:700",
+       "RRA:AVERAGE:0.5:24:775",
+       "RRA:AVERAGE:0.5:288:797",
+       "RRA:LAST:0.5:1:1" 
+    ],
+    Windsensor => [
+       "DS:Windspeed:GAUGE:600:0:100",
+       "DS:Winddirection:GAUGE:600:0:360",
+       "DS:Windvariation:GAUGE:600:0:3",
+       "RRA:AVERAGE:0.5:1:600",
+       "RRA:AVERAGE:0.5:6:700",
+       "RRA:AVERAGE:0.5:24:775",
+       "RRA:AVERAGE:0.5:288:797",
+       "RRA:LAST:0.5:1:1" 
+    ],
+    Indoorsensor => [
+       "DS:Pressure:GAUGE:600:800:1100",
+       "DS:Temperature:GAUGE:600:-30:70",
+       "DS:Humidity:GAUGE:600:0:100",
        "RRA:AVERAGE:0.5:1:600",
        "RRA:AVERAGE:0.5:6:700",
        "RRA:AVERAGE:0.5:24:775",
@@ -185,39 +177,27 @@ my $DEBUG = 1; # set $DEBUG = 1, or set environment variable DEBUG=1
 );
 
 %fetchopts = (
-   PressureI => {
+   Sensor1 =>  {
       "--start" => "-6000",
       LAST      => undef
    },
-   TempI =>  {
+   Sensor3 =>  {
       "--start" => "-6000",
       LAST      => undef
    },
-   HumidityI =>  {
+   Sensor5 =>  {
       "--start" => "-6000",
       LAST      => undef
    },
-   Outdoor16 =>  {
+   Rainsensor =>  {
       "--start" => "-6000",
       LAST      => undef
    },
-   Outdoor18 =>  {
+   Windsensor =>  {
       "--start" => "-6000",
       LAST      => undef
    },
-   Outdoor28 =>  {
-      "--start" => "-6000",
-      LAST      => undef
-   },
-   Indoorsensor11 =>  {
-      "--start" => "-6000",
-      LAST      => undef
-   },
-   Indoor71 =>  {
-      "--start" => "-6000",
-      LAST      => undef
-   },
-   Rain39 =>  {
+   Indoorsensor =>  {
       "--start" => "-6000",
       LAST      => undef
    }
@@ -254,6 +234,25 @@ my $DEBUG = 1; # set $DEBUG = 1, or set environment variable DEBUG=1
         "--vertical-label" => "[% rel.hum.]",
         "--lower-limit"    => 0,
         "--width"          => 90,
+    },
+    Temp1 => {
+        "--start" => -86400,
+        "--title"          => "Temperature Sensor 1",
+#        "--interlaced"      => undef,
+        "--imgformat"      => "PNG",
+        "--vertical-label" => "[C]",
+        "--lower-limit"    => 0,
+        "--width"          => 90,
+        "--x-grid"          => "HOUR:4:DAY:1:DAY:1:0:%A",
+    },
+    Hum1 => {
+        "--start" => -86400,
+        "--title"          => "Humidity Sensor 1",
+#        "--interlace" => undef,
+        "--imgformat"      => "PNG",
+        "--vertical-label" => "[% rel.hum.]",
+        "--lower-limit"    => 0,
+        "--width"          => 90,
     }
 );
 
@@ -280,17 +279,22 @@ my $DEBUG = 1; # set $DEBUG = 1, or set environment variable DEBUG=1
         "GPRINT:humi:MAX:Maximum %1.2lf",
         "GPRINT:humi:MIN:Minimum %1.2lf\\n"
         ],
+    Temp1     => [
+        "DEF:Temperature=Sensor1.rrd:Temperature:AVERAGE",
+        "LINE2:Temperature#00a000:Temperature",
+        "GPRINT:Temperature:AVERAGE:Average %1.2lf",
+        "GPRINT:Temperature:MAX:Maximum %1.2lf",
+        "GPRINT:Temperature:MIN:Minimum %1.2lf\\n"
+        ],
+    Hum1 => [
+        "DEF:Humidity=Sensor1.rrd:humi:AVERAGE",
+        "LINE2:Humidity#00a000:Humidity",
+        "GPRINT:Humidity:AVERAGE:Average %1.2lf",
+        "GPRINT:Humidity:MAX:Maximum %1.2lf",
+        "GPRINT:Humidity:MIN:Minimum %1.2lf\\n"
+        ]
 );
 
-#@Sensors = ( "Temp1", "Humidity1", "Temp2", "Humidity2", 
-#                "Temp3", "Humidity3", "Temp4", "Humidity4", 
-#                "Temp5", "Humidity5", "Temp6", "Humidity6",
-#                "Temp7", "Humidity7", "Temp8", "Humidity8",
-#                "Rainfall",
-#                "Windspd", "Winddir", "Winddev",
-#                "PressureI", "TempI", "HumidityI" );
 
-@Sensors = ( "Temp4", "Humidity4",
-                "PressureI", "TempI", "HumidityI" );
-
-@Sensors = ( "Outdoor16", "Outdoor18", "Outdoor28", "Indoorsensor11", "Indoor71", "Rain39" );
+@Sensors = ( "Sensor1", "Sensor3", "Sensor5", 
+             "Rainsensor", "Windsensor", "Indoorsensor" );
