rrdfetch dhandler modified

--- a/wth_foundation/wth/trunk/mason/wthrrd.conf
+++ b/wth_foundation/wth/trunk/mason/wthrrd.conf
@@ -12,6 +12,10 @@ $testvariable = "calling rrd with mason";
    HumidityI =>  {
       "--start" => "-6000",
       LAST      => undef,
+   },
+   Indoorsensor =>  {
+      "--start" => "-6000",
+      LAST      => undef,
    }
 );
 
@@ -91,4 +95,7 @@ $testvariable = "calling rrd with mason";
       description => "Indoor Humidity",
       unit => "% rel.hum."
    },
+   Indoorsensor =>  {
+      rrdfile => "/proj/wetter/software/serial/wth/trunk/Indoorsensor.rrd",
+   }
 );
